# datanalyz

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
core/: processing.py
dc_optimizer/: .pre-commit-config.yaml  README.md  pyproject.toml
dc_optimizer/src/dc_optimizer/: __init__.py  optimizer.py
fastapi_app/: .dockerignore  .env  Dockerfile  config.py  docker-compose.yaml  main.py  requirements.txt  routes.py
fastapi_app/app/: dependencies.py  init_dependencies.py  main.py
fastapi_app/app/common/: config.py  db.py
fastapi_app/app/routes/: config.py
fastapi_app/app/schemas/: app_config.py  responses.py  runtime_config.py
fastapi_app/app/services/: runtime_config_service.py
fastapi_app/app/territories/: crud.py  models.py  router.py  schemas.py
fastapi_app/migrations/: env.py
fastapi_app/migrations/versions/: 4f59eb23ef1e_add_description_to_territories.py  eb9ac361eb44_create_territories_and_metrics_tables.py
src/urban_analytics/: __init__.py  exceptions.py
src/urban_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/urban_analytics/core/: __init__.py  geometry.py
src/urban_analytics/services/: __init__.py  accessibility.py
