[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urban_analytics"
version = "0.1.0"
description = "Библиотека для пространственного анализа городской инфраструктуры"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.3",
    "loguru>=0.7.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
